syntax = "proto3";

package io.harness.pms.contracts.resume;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/execution/execution_mode.proto";
import "io/harness/pms/contracts/refobjects/resolved_ref_object.proto";

message NodeResumeEvent {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  io.harness.pms.contracts.execution.ExecutionMode executionMode = 2;
  bytes stepParameters = 3;
  bool asyncError = 5;
  map<string, bytes> response = 6;
  ChainDetails chainDetails = 7;
  repeated io.harness.pms.contracts.refobjects.ResolvedRefInput resolvedInput = 8;
}

message ChainDetails {
  bool isEnd = 1;
  bytes passThroughData = 2;
}
